--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,8 +2,9 @@ name: Update repo list
 
 on:
   push:
+    branches: [ main ]
   schedule:
-  - cron "* */24 * * *"
+    - cron "* */24 * * *"
 
 jobs:
   update:
