--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,7 +11,8 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
  
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
