--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - main
   schedule:
-    - cron: "0 */12 * * *" # run every 12 hours
+    - cron: "0 0 */3 * *" # run every 3 days at 00:00
 
 jobs:
   update:
